--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-<title></title>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Minecraft</title>
+</head>
 
 <body>
     <header>
